2013-06-12  Mischa Jonker  <mjonker@synopsys.com>

	 * configure.ac: Add support for ARC.
	 * Makefile.am: Likewise.
	 * README: Add ARC details.
	 * src/arc/arcompact.S: New.
	 * src/arc/ffi.c: Likewise.
	 * src/arc/ffitarget.h: Likewise.

2013-03-28  David Schneider  <david.schneider@bivab.de>

	 * src/arm/ffi.c: Fix support for ARM hard-float calling convention.
	 * src/arm/sysv.S: call different methods for SYSV and VFP ABIs.
	 * testsuite/libffi.call/cls_many_mixed_args.c: testcase for a closure with
	 mixed arguments, many doubles.
	 * testsuite/libffi.call/many_double.c: testcase for calling a function using
	 more than 8 doubles.
	 * testcase/libffi.call/many.c: use absolute value to check result against an
	 epsilon

2013-03-17  Anthony Green  <green@moxielogic.com>

	* README: Update for 3.0.13.
	* configure.ac: Ditto.
	* configure: Rebuilt.
	* doc/*: Update version.

2013-03-17  Dave Korn  <dave.korn.cygwin@gmail.com>

	* src/closures.c (is_emutramp_enabled
	[!FFI_MMAP_EXEC_EMUTRAMP_PAX]): Move default definition outside
	enclosing #if scope.

2013-03-17  Anthony Green  <green@moxielogic.com>

	* configure.ac: Only modify toolexecdir in certain cases.
	* configure: Rebuilt.

2013-03-16  Gilles Talis  <gilles.talis@gmail.com>

	* src/powerpc/ffi.c (ffi_prep_args_SYSV): Don't use
	fparg_count,etc on __NO_FPRS__ targets.

2013-03-16  Alan Hourihane  <alanh@fairlite.co.uk>

	* src/m68k/sysv.S (epilogue): Don't use extb instruction on
	m680000 machines.

2013-03-16  Alex Gaynor <alex.gaynor@gmail.com>

	* src/x86/ffi.c (ffi_prep_cif_machdep): Always align stack.

2013-03-13  Markos Chandras <markos.chandras@imgtec.com>

	* configure.ac: Add support for Imagination Technologies Meta.
	* Makefile.am: Likewise.
	* README: Add Imagination Technologies Meta details.
	* src/metag/ffi.c: New.
	* src/metag/ffitarget.h: Likewise.
	* src/metag/sysv.S: Likewise.

2013-02-24  Andreas Schwab  <schwab@linux-m68k.org>
